# phyloid-engine

./: AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  EVOLUTION.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: basic_evolution.py  custom_operators.py  multi_objective.py
python/phyloid_engine/: __init__.py  crossover.py  engine.py  events.py  mutation.py  organism.py  paradigm.py  prng.py  selection.py
src/: crossover.js  engine.js  events.js  index.js  mutation.js  organism.js  paradigm.js  prng.js  selection.js
test/: crossover.test.js  engine.test.js  events.test.js  mutation.test.js  organism.test.js  paradigm.test.js  prng.test.js  selection.test.js
tests/: conftest.py  test_crossover.py  test_crossover_comprehensive.py  test_engine.py  test_engine_comprehensive.py  test_error_hardening.py  test_events.py  test_events_comprehensive.py  test_mutation.py  test_mutation_comprehensive.py  test_organism.py  test_organism_comprehensive.py  test_paradigm.py  test_paradigm_comprehensive.py  test_performance.py  test_prng.py  test_prng_comprehensive.py  test_property_based.py  test_selection.py  test_selection_comprehensive.py
