[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phyloid-engine"
version = "0.1.0"
description = "PEP-003 evolution engine — organism selection, crossover, mutation with paradigm judges"
license = "MIT"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
